Added rate limits

--- a/default.project.json
+++ b/default.project.json
@@ -6,7 +6,11 @@
     "ReplicatedStorage": {
       "$ignoreUnknownInstances": true,
       "VibezAPI": {
-        "$path": "src"
+        "$path": "src/Basic"
+      },
+
+      "VibezAPI_Premium": {
+        "$path": "src/Premium"
       }
     },
 
