--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,7 +21,7 @@ jobs:
 
     - name: Lint
       run: |
-        selene ./modules
+        selene ./src
 
   style:
     name: Styling
@@ -32,4 +32,4 @@ jobs:
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         version: v0.16.0
-        args: --check ./modules
+        args: --check ./src
