Hooks: setAuthor, setUsername, setTTS | Embed: setTimestamp, setFooter, setAuthor, setThumbnail | bug fixes and doc fixes

--- a/moonwave.toml
+++ b/moonwave.toml
@@ -1,7 +1,6 @@
 gitRepoUrl = "https://github.com/ItsRune/VibezAPI"
-baseUrl = "/api/VibezAPI"
 
-classOrder = ["VibezAPI", "RateLimiter"]
+classOrder = ["VibezAPI", "Webhooks", "RateLimiter", "EmbedBuilder"]
 
 # Home page settings
 [home]
