changed 'VibezAPI' to 'MainModule'

--- a/default.project.json
+++ b/default.project.json
@@ -5,7 +5,7 @@
 
     "ReplicatedStorage": {
       "$ignoreUnknownInstances": true,
-      "VibezAPI": {
+      "MainModule": {
         "$path": "./src"
       }
     },
