--- a/default.project.json
+++ b/default.project.json
@@ -3,7 +3,7 @@
   "tree": {
     "$className": "DataModel",
 
-    "ReplicatedStorage": {
+    "ServerScriptService": {
       "$ignoreUnknownInstances": true,
       "MainModule": {
         "$path": "./src"
