added back .moonwave

--- a/moonwave.toml
+++ b/moonwave.toml
@@ -1,4 +1,5 @@
 gitRepoUrl = "https://github.com/ItsRune/VibezAPI"
+onBrokenLinks = "ignore"
 
 classOrder = ["VibezAPI", "Webhooks", "RateLimiter", "EmbedBuilder"]
 
