added error logger back with increased success rate on error logs & fixed rank points example in Ranking.md & changed project.json to 'VibezAPI' rather than 'MainModule' for the script's name

--- a/.vibez/externalConfig.json
+++ b/.vibez/externalConfig.json
@@ -65,6 +65,7 @@
         "isAsync": { "type": "boolean", "default": false },
         "rankingCooldown": { "type": "number", "default": 30 },
         "overrideGlobals": { "type": "boolean", "default": false },
-        "usePromises": { "type": "boolean", "default": false, "hidden": true }
+        "usePromises": { "type": "boolean", "default": false, "hidden": true },
+        "checkForUpdates": { "type": "boolean", "default": true }
     }
 }
