fixed issue regarding roblox's moderation ai

--- a/default.project.json
+++ b/default.project.json
@@ -4,9 +4,9 @@
     "$className": "DataModel",
 
     "ServerScriptService": {
-      "VibezRanking": {
+      "VibezAPI": {
         "$ignoreUnknownInstances": true,
-        "$path": "./src/Ranking"
+        "$path": "./src"
       }
     }
   }
