removed features that detected auto updates via github, fixed docs with asset id, added full support for new global api along with docs

--- a/moonwave.toml
+++ b/moonwave.toml
@@ -1,5 +1,5 @@
 gitRepoUrl = "https://github.com/ItsRune/VibezAPI"
-classOrder = ["VibezAPI", "VibezRanking"]
+classOrder = ["VibezAPI", "Webhooks", "RateLimiter", "EmbedBuilder"]
 
 # Docusaurus settings
 [docusaurus]
