--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -15,8 +15,10 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-    - name: Install Aftman
-      uses: ok-nick/setup-aftman@v0.4.2
+    - name: Install Foreman
+      uses: Roblox/setup-foreman@v1
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
     - name: Lint
       run: selene ./src
 
