--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -25,6 +25,10 @@ jobs:
       run: |
         touch selene.toml
         echo 'std="roblox"' >> selene.toml
+        echo '' >> selene.toml
+        echo '[lints]' >> selene.toml
+        echo 'global_usage="warning"' >> selene.toml
+        echo 'incorrect_standard_library_use="ignore"' >> selene.toml
       shell: bash
     
     - name: Lint & Stylua Check
