--- a/selene.toml
+++ b/selene.toml
@@ -2,3 +2,4 @@ std = "roblox"
 
 [lints]
 global_usage = "allow" # Since there's a global library, selene gets mad.
+incorrect_standard_library_use = "allow"
