--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -21,15 +21,16 @@ jobs:
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Generate selene.toml
+    - name: Verify selene.toml exists & Create new if it doesn't
       run: |
-        touch selene.toml
-        echo 'std="roblox"' >> selene.toml
-        echo '' >> selene.toml
-        echo "[lints]" >> selene.toml
-        echo 'global_usage="allow"' >> selene.toml
-        echo 'incorrect_standard_library_use="allow"' >> selene.toml
-        cat selene.toml
+        if ! test -f selene.toml; then
+          touch selene.toml
+          echo 'std="roblox"' >> selene.toml
+          echo '' >> selene.toml
+          echo "[lints]" >> selene.toml
+          echo 'global_usage="allow"' >> selene.toml
+          echo 'incorrect_standard_library_use="allow"' >> selene.toml
+        fi
       shell: bash
     
     - name: Lint & Stylua Check
