fixed tons of issues with the new UI & added topbar+ & applied a fix to an issue within the commands section that was detected in the prev version

--- a/default.project.json
+++ b/default.project.json
@@ -4,7 +4,7 @@
     "$className": "DataModel",
 
     "ServerScriptService": {
-      "VibezAPI": {
+      "MainModule": {
         "$ignoreUnknownInstances": true,
         "$path": "./src"
       }
