--- a/aftman.toml
+++ b/aftman.toml
@@ -3,5 +3,10 @@
 
 # To add a new tool, add an entry to this table.
 [tools]
-rojo = "rojo-rbx/rojo@7.4.0-rc3"
-# rojo = "rojo-rbx/rojo@6.2.0"
+rojo = "rojo-rbx/rojo@7.4.4"
+darklua = "seaofvoices/darklua@0.13.1"
+wally-package-types = "johnnymorganz/wally-package-types@1.3.2"
+wally = "UpliftGames/wally@0.3.2"
+stylua = "johnnymorganz/stylua@0.20.0"
+selene = "kampfkarren/selene@0.27.1"
+luau-lsp = "johnnymorganz/luau-lsp@1.33.0"
