--- a/moonwave.toml
+++ b/moonwave.toml
@@ -43,11 +43,11 @@ height = 64
 # Footer
 [footer]
 style = "light"
-copyright = "Copyright © 2023 ItsRune."
+copyright = "Copyright © 2024 ItsRune."
 
-# Footer Docs
+# Footer Documentation
 [[footer.links]]
-title = "Docs"
+title = "Documentation"
 
 [[footer.links.items]]
 label = "Getting Started"
@@ -69,9 +69,9 @@ href = "https://www.roblox.com/groups/4604891/Vibez-Development#!/about"
 label = "Discord"
 href = "https://discord.gg/vdev"
 
-# Footer More
+# Footer Other
 [[footer.links]]
-title = "More"
+title = "Other"
 
 [[footer.links.items]]
 label = "Developer's Profile"
