--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
-    "luau-lsp.require.mode": "relativeToFile",
     "luau-lsp.require.directoryAliases": {
         "@lune/": "~/.lune/.typedefs/0.8.8/",
         "@private/": "../private/"
     },
-    "stylua.targetReleaseVersion": "latest"
+    "stylua.targetReleaseVersion": "latest",
+    "stylua.disableVersionCheck": true
 }
