removed some garbage folders/files

--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -3,56 +3,32 @@ name: CI
 on:
   push:
     branches:
-      - master
+    - master
   pull_request:
     branches:
-      - master
+    - master
 
 jobs:
-  analyze:
-    name: Analyze
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Install Aftman
-        uses: ok-nick/setup-aftman@v0.4.2
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Install Wally packages
-        run: sh scripts/install-packages.sh
-
-      - name: Analyze
-        run: sh scripts/analyze.sh
-
   lint:
     name: Lint
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Install Aftman
-        uses: ok-nick/setup-aftman@v0.4.2
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Lint
-        run: |
-          selene src/
+    - name: Checkout code
+      uses: actions/checkout@v4
+    - name: Install Aftman
+      uses: ok-nick/setup-aftman@v0.4.2
+    - name: Lint
+      run: |
+        selene generate-roblox-std
+        selene ./src
 
   style:
     name: Styling
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Check code style
-        uses: JohnnyMorganz/stylua-action@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          version: v0.20.0
-          args: --check src/
+    - uses: actions/checkout@v4
+    - uses: JohnnyMorganz/stylua-action@v4
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        version: v0.20.0
+        args: --check ./src
