--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -2,9 +2,13 @@ name: CI
 
 on:
   push:
+    paths:
+      - 'src/**'
     branches:
     - master
   pull_request:
+    paths:
+      - 'src/**'
     branches:
     - master
 
