--- a/.github/workflows/publish-docs.yaml
+++ b/.github/workflows/publish-docs.yaml
@@ -5,12 +5,12 @@ on:
     branches:
       - master
     paths:
-      - '**.md'
+      - 'docs/**.md'
   pull_request:
     branches:
       - master
     paths:
-      - '**.md'
+      - 'docs/**.md'
 
 jobs:
   publish_docs:
