add moonwave action

--- a/.github/workflows/publish-docs.yaml
+++ b/.github/workflows/publish-docs.yaml
@@ -13,15 +13,20 @@ on:
       - 'docs/**.md'
 
 jobs:
-  publish_docs:
-    name: Publish Docs
+  status:
     runs-on: ubuntu-latest
+    name: Publish docs to GitHub Pages
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    - name: Install Node
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20.x'
-    - run: npm i -D moonwave
-    - run: node ~/usr/local/lib/node_modules/moonwave/dist/index.ts build --publish
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "22"
+      - run: npm i -g moonwave@latest
+      - name: Publish
+        run: |
+          git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+          git config --global user.email "support+actions@github.com"
+          git config --global user.name "github-actions-bot"
+          moonwave build --publish
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
