remove throwing warnings for broken links

--- a/.github/workflows/publish-docs.yaml
+++ b/.github/workflows/publish-docs.yaml
@@ -6,11 +6,13 @@ on:
       - master
     paths:
       - 'docs/**.md'
+      - 'moonwave.toml'
   pull_request:
     branches:
       - master
     paths:
       - 'docs/**.md'
+      - 'moonwave.toml'
 
 jobs:
   status:
