update types to reflect module name change

--- a/moonwave.toml
+++ b/moonwave.toml
@@ -1,7 +1,7 @@
 gitRepoUrl = "https://github.com/ItsRune/Vibez"
 
 [[classOrder]]
-section = "Vibez"
+section = "Main"
 classes = ["Vibez", "Webhooks", "RateLimiter", "EmbedBuilder", "ActivityTracker"]
 
 [[classOrder]]
