quick fix of ActivityTracker and Hooks not requiring their modules on startup

--- a/default.project.json
+++ b/default.project.json
@@ -4,6 +4,7 @@
         "$className": "DataModel",
 
         "ServerScriptService": {
+            "$ignoreUnknownInstances": true,
             "MainModule": {
                 "$ignoreUnknownInstances": true,
                 "$path": "./src"
